# khora

./: .env.example  .gitignore  .pre-commit-config.yaml  .semgrep.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  OPTIMIZATION_PLAN.md  README.md  REPOMIX.md  SECURITY.md  alembic.ini  codecov.yml  compose.full.yaml  compose.yaml  docker-entrypoint.sh  fly.toml  issue.md  pyproject.toml  repomix.config.json
.claude/agents/: ai-engineer.md  architect.md  computer-scientist.md  database-engineer.md  devils-advocate.md  python-engineer-1.md  python-engineer-2.md  rust-engineer.md
.claude/docs/: workflow.md
.github/scripts/: publish-codeartifact.sh
.github/workflows/: ci.yml  coverage-nightly.yml  e2e.yml  filter-conformance.yml  publish-accel.yml  publish.yml  release.yml  soak.yml
alembic/: env.py
alembic/versions/: 000_initial_schema.py  001_add_namespace_versioning.py  002_search_improvements.py  003_flexible_type_columns.py  004_add_temporal_tables.py  005_index_improvements.py  006_uuid_as_uuid.py  007_hnsw_parameter_tuning.py  008_entity_dedup_and_indexes.py  009_temporal_search_indexes.py  010_add_source_columns.py  010_document_source_index.py  010_flatten_namespace_hierarchy.py  011_drop_namespace_slug.py  012_add_stable_namespace_id.py
config/: khora.example.yaml
docs/: AI_CHANGELOG.md  OPTIMIZATION_PLAN.md  README.md  REFERENCES.md  RELEASE.md  RUST_ACCELERATION_PLAN.md  api-reference.md  configuration.md  consumers.md  dream-phase.md  migrations.md  nested-env-vars.md  observability.md  roadmap.md  telemetry-contract.json  telemetry-contract.md
docs/adrs/: adr-022-extraction-skills-public-api.md  adr-024-khora-public-api.md  adr-024-memory-lake-public-api.md  adr-025-embedded-backend-realignment.md  adr-026-telemetry-contract.md  adr-027-khora-rename.md
docs/architecture/: event-sourcing.md  failure-observability-contract.md  multi-tenancy.md  overview.md  performance-optimization.md  rust-acceleration.md  storage-backends.md
docs/data-models/: documents-chunks.md  events.md  knowledge-graph.md  overview.md
docs/design/: document-update-identity.md  namespace-optimization-plan.md
docs/engines/: chronicle-engine.md  engine-comparison.md  hybrid-search.md  khora-engine.md  skeleton-engine.md  skeleton-indexing.md  temporal-model.md  vectorcypher-engine.md
docs/extraction/: chunkers.md  conversation-chunking.md  embedders.md  expertise-system.md  extractors.md  ingestion-pipeline.md  overview.md  semantic-expansion.md
docs/hooks/: semantic-hooks.md
docs/integrations/: crewai.md  google_adk.md  hermes.md  index.md  langgraph.md  llamaindex.md  openai_agents.md
docs/prds/: DYT-199-citation-sources.md  DYT-219-remove-fastapi.md  DYT-220-flatten-namespace-hierarchy.md  DYT-315-remove-namespace-slugs.md
docs/query-engine/: agentic-search.md  fusion.md  overview.md  query-understanding.md  recall-semantics.md  retrieval-tuning.md  search-modes.md  temporal-queries.md
examples/: README.md  khora.embedded.yaml  khora.standard.yaml  neo4j_debug_logging.py
examples/00_quickstart/: 01_remember_recall.py  02_grounded_answers.py  03_forget_what_was_wrong.py  04_namespaces_for_users.py
examples/10_core_apis/: 01_remember_batch.py  02_recall_with_filters.py  03_ontology_config.py  04_recall_entities_and_relationships.py  05_find_related_entities.py  06_expertise_config.py  06_image_ingestion.py  07_image_ingestion.py  08_recall_with_metadata_filters.py
examples/20_integrations/: 01_langgraph.py  02_openai_agents.py  03_crewai_multi_agent.py
examples/30_workloads/: 01_per_user_preferences.py  02_document_qa_with_abstention.py  03_support_ticket_graph.py  04_agent_chat_with_memory.py  05_dream_phase_consolidation.py  06_namespace_versioning.py  07_temporal_range_query.py  08_resume_search.py  09_bulk_archive.py  10_tool_router_learning.py  11_image_ingestion.py  11_multimodal_document_qa.py
examples/40_flagship/: anna_karenina_iterative_ontology.py
examples/_helpers/: __init__.py  khora_fixtures.py  mock_llm.py
examples/data/: hr_policies.jsonl  resumes.jsonl  support_tickets.jsonl
examples/integrations/: README.md
examples/integrations/google_adk/: README.md  example.py  pyproject.toml
examples/integrations/langgraph/: README.md  example.py  pyproject.toml
rust/: Cargo.toml
rust/khora-accel/: Cargo.toml  README.md  pyproject.toml
rust/khora-accel/benches/: block_and_score_pairs.rs  bm25_bench.rs  cosine_bench.rs  pagerank_bench.rs
rust/khora-accel/src/: blocking.rs  bm25.rs  community.rs  cosine.rs  dedup.rs  entity_resolution.rs  keyword_extract.rs  lib.rs  mmr.rs  pagerank.rs  rrf.rs  string_sim.rs  temporal.rs  utils.rs
scripts/: audit_graph_density.py  bench_logger_enqueue.py  bench_neighborhood_expansion.py  bench_neo4j_pool_acquire.py  bench_replace_extraction.py  bench_telemetry_overhead.py  check_coverage_floors.py  measure_action_item_extraction.py  slack-notify.py  update_repomix.py
src/: khora_accel.pyi
src/khora/: __init__.py  __main__.py  _accel.py  exceptions.py  gc.py  khora.py  logging_config.py  memory_lake.py  search_mode.py
tests/: __init__.py  conftest.py  test_secret_typing.py
tests/e2e/: DESIGN_NOTES.md  __init__.py  _harness.py  conftest.py  test_filter_report_invariant.py  test_filter_rowset_chronicle.py  test_filter_rowset_embedded.py  test_filter_rowset_graph.py  test_filter_rowset_skeleton_pgvector.py  test_filter_rowset_skeleton_sqlite_lance.py  test_filter_rowset_skeleton_surrealdb.py  test_filter_rowset_skeleton_weaviate.py  test_filter_rowset_vc_embedded.py  test_graph_contribution.py  test_multichunk_denorm.py
tests/fixtures/: action_item_labels.jsonl
tests/integration/: _sqlite_lance_fixtures.py  conftest.py  test_1329_relationship_merge_namespace_scope.py  test_channel_filter_operator_matrix.py  test_channel_filter_operator_matrix_change.py  test_chronicle_filter_embedded.py  test_chronicle_filter_pgvector.py  test_compile_postgres_rowset.py  (+51 more)
tools/: check_examples_drift.py  check_optional_imports.py
(+1065 files in other folders)
