[project]
name = "khora"
version = "0.3.0"
description = "Khora is Memory Lake"
readme = "README.md"
authors = [
    { name = "Igor Bogicevic", email = "igor.bogicevic@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    # Configuration
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "jinja2>=3.1.0",
    # FastAPI service
    "fastapi>=0.128.1",
    "uvicorn[standard]>=0.40.0",
    "httpx>=0.28.1",
    # CLI
    "click>=8.3.0",
    # Async support
    "asyncpg>=0.31.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.46",
    "alembic>=1.18.3",
    # Terminal UI
    "rich>=14.3.2",
    "loguru>=0.7.3",
    # LLM Access (unified interface)
    "litellm>=1.81.8",
    # Graph database
    "neo4j>=6.1.0",
    # Vector database
    "pgvector>=0.4.2",
    # Token counting
    "tiktoken>=0.12.0",
    # Neural reranking
    "sentence-transformers>=3.0.0",
    # Retry logic
    "tenacity>=9.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
    "pytest-asyncio>=1.3.0",
    "coverage>=7.13.3",
    "black>=26.0.0",
    "ruff>=0.15.0",
    "isort>=7.0.0",
    "prek>=0.3.1",
    "ty>=0.0.15",
]
# Data storage backends
postgres = [
    "asyncpg>=0.31.0",
    "pgvector>=0.4.2",
]
# Graph backends
neo4j = ["neo4j>=6.1.0"]
kuzu = ["kuzu>=0.8.0"]
memgraph = ["neo4j>=6.1.0"]  # Memgraph uses bolt protocol via neo4j driver
arcadedb = ["httpx>=0.28.0"]
# All graph backends
graph-all = ["neo4j>=6.1.0", "kuzu>=0.8.0", "httpx>=0.28.0"]
# Weaviate vector database
weaviate = ["weaviate-client>=4.10.0"]
# All backends
all-backends = [
    "neo4j>=6.1.0",
    "kuzu>=0.8.0",
    "asyncpg>=0.31.0",
    "pgvector>=0.4.2",
    "httpx>=0.28.0",
    "weaviate-client>=4.10.0",
]
# Neural reranking
reranking = [
    "sentence-transformers>=3.0.0",
]
# Accelerated CPU operations (numpy for cosine sim, rapidfuzz for string matching)
accel = [
    "rapidfuzz>=3.0.0",
]
# NLP tools
nlp = ["spacy>=3.8.0"]
# Rust-accelerated operations (requires Rust toolchain to build from source)
rust = [
    "khora-accel>=0.1.0",
]

[project.scripts]
khora = "khora:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=khora",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=46",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    # Khora engine backends require database connections for testing
    "*/engines/khora/backends/pgvector.py",
    "*/engines/khora/backends/weaviate.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
target-version = ["py313"]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["khora"]
skip_gitignore = true

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]  # Line too long - handled by black

[tool.ty.environment]
python-version = "3.13"
extra-paths = ["src"]

[tool.ty.rules]
# Suppress noisy rules to start green; tighten incrementally
invalid-argument-type = "ignore"       # 58 errors, mostly third-party stubs (FastAPI/Starlette/SQLAlchemy)
invalid-method-override = "ignore"     # 4 errors, str(Enum) LSP violations in Permission
possibly-missing-attribute = "ignore"  # 10 warnings, protocol/union narrowing gaps
unsupported-operator = "ignore"        # 7 errors, dict typed as dict[str, Any] += int
call-non-callable = "ignore"           # 2 errors, dynamic factory patterns
invalid-type-form = "ignore"           # 3 errors, advanced generics
unknown-argument = "ignore"            # 3 errors, third-party keyword args
deprecated = "ignore"                  # 6 warnings, third-party deprecations
unresolved-attribute = "warn"          # 6 errors, protocol/model attribute gaps
unresolved-reference = "warn"          # 2 errors, forward references
unresolved-import = "warn"             # 1 error, optional dependency (kuzu)
invalid-assignment = "warn"            # 2 errors, third-party stub mismatches
invalid-return-type = "warn"           # 2 errors, implicit None returns
not-iterable = "warn"                  # 1 error, exception unpacking pattern
unused-ignore-comment = "warn"         # 1 warning, stale type: ignore comment

[tool.uv.sources]
khora-accel = { path = "rust/khora-accel", editable = true }

[dependency-groups]
dev = [
    "prek>=0.3.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "black>=26.0.0",
    "ruff>=0.15.0",
    "isort>=7.0.0",
    "ty>=0.0.15",
    "rapidfuzz>=3.0.0",  # For ty type checking of optional accel module
    "spacy>=3.8.0",
]
