[project]
name = "khora"
dynamic = ["version"]
description = "Khora is Memory Lake"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "AllTheData Inc." }
]
requires-python = ">=3.13"
dependencies = [
    # Configuration
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "jinja2>=3.1.6",
    # Async support
    "asyncpg>=0.31.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.47",
    "alembic>=1.18.4",
    "loguru>=0.7.3",
    # LLM Access (unified interface)
    "litellm>=1.81.15",
    # Graph database
    "neo4j>=6.1.0",
    # Vector database
    "pgvector>=0.4.2",
    # Token counting
    "tiktoken>=0.12.0",
    # Neural reranking
    "sentence-transformers>=5.2.3",
    # Retry logic
    "tenacity>=9.1.4",
    # Temporal date parsing
    "dateparser>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.3.0",
    "coverage>=7.13.4",
    "ruff>=0.15.2",
    "prek>=0.3.3",
    "ty>=0.0.18",
]
# Data storage backends
postgres = [
    "asyncpg>=0.31.0",
    "pgvector>=0.4.2",
]
# Graph backends
neo4j = ["neo4j>=6.1.0"]
# DEPRECATED in 0.9.0 — kuzu extra will be removed in 0.10.0.
# Use the sqlite-lance extra for embedded, or neo4j for production.
kuzu = ["kuzu>=0.11.3"]
memgraph = ["neo4j>=6.1.0"]  # Memgraph uses bolt protocol via neo4j driver
neptune = ["neo4j>=6.1.0"]  # Neptune uses Bolt protocol via neo4j driver
neptune-iam = ["neo4j>=6.1.0", "boto3>=1.35.0"]  # With IAM auth support
age = ["asyncpg>=0.31.0"]  # AGE uses PostgreSQL via asyncpg
# All graph backends
# DEPRECATED in 0.9.0 — graph-all still pulls in kuzu (deprecated). Transitional;
# will drop kuzu in 0.10.0. Prefer the explicit per-backend extras.
graph-all = ["neo4j>=6.1.0", "kuzu>=0.11.3"]
# Weaviate vector database
weaviate = ["weaviate-client>=4.20.1"]
# All backends
all-backends = [
    "neo4j>=6.1.0",
    "kuzu>=0.11.3",
    "asyncpg>=0.31.0",
    "pgvector>=0.4.2",
    "httpx>=0.28.1",
    "weaviate-client>=4.20.1",
    "surrealdb>=2.0.0a1",
    "aiosqlite>=0.20.0",
    "lancedb>=0.17.0",
    "pyarrow>=18.0.0",
]
# Neural reranking
reranking = [
    "sentence-transformers>=3.0.0",
]
# Binary file readers (PDF, Excel, Word text extraction) — used by khora-cli and downstream consumers
binary-readers = ["pymupdf>=1.25.0", "openpyxl>=3.1.0", "python-docx>=1.1.0"]
# Parquet file support (used by khora-cli and downstream consumers)
parquet = ["pyarrow>=18.0.0"]
# Accelerated CPU operations (numpy for cosine sim, rapidfuzz for string matching)
accel = [
    "rapidfuzz>=3.0.0",
]
# Observability
logfire = ["logfire>=4.0"]
# NLP tools
nlp = ["spacy>=3.8.0"]
# Rust-accelerated operations (requires Rust toolchain to build from source)
rust = [
    "khora-accel>=0.1.0",
]
# SurrealDB unified backend (graph + vector + relational in one DB)
surrealdb = ["surrealdb>=2.0.0a1"]
embedded = ["surrealdb>=2.0.0a1"]
# SQLite embedded backend (zero-infrastructure relational + vector)
sqlite = ["aiosqlite>=0.20.0"]
# LanceDB embedded vector store (Chronicle engine, zero-infrastructure)
lancedb = ["lancedb>=0.17.0", "pyarrow>=18.0.0"]
# SQLite + LanceDB embedded backend (relational via aiosqlite + vector via LanceDB)
sqlite-lance = ["lancedb>=0.17.0", "aiosqlite>=0.20.0", "pyarrow>=18.0.0"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options.local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["src/khora"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=khora",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=46",
    "-m",
    "not slow",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests (skipped by default; run with -m slow)",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    # Khora engine backends require database connections for testing
    "*/engines/khora/backends/pgvector.py",
    "*/engines/khora/backends/weaviate.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.format]
# Replaces black — same style
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S"]
ignore = [
    "E501",   # Line too long — handled by formatter
    "S101",   # Allow assert in non-test code (used in internal invariants)
    "UP042",  # str(Enum) pattern is deliberate — StrEnum changes serialization
    "UP046",  # Generic[T] subclass — PEP 695 type params not adopted yet
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S107", "S108", "S110", "S311"]

[tool.ruff.lint.isort]
known-first-party = ["khora"]

[tool.ty.environment]
python-version = "3.13"
extra-paths = ["src"]

[tool.ty.rules]
# Suppress noisy rules to start green; tighten incrementally
invalid-argument-type = "ignore"       # third-party stubs (SQLAlchemy, etc.)
invalid-method-override = "ignore"     # 4 errors, str(Enum) LSP violations in Permission
possibly-missing-attribute = "ignore"  # 10 warnings, protocol/union narrowing gaps
unsupported-operator = "ignore"        # 7 errors, dict typed as dict[str, Any] += int
call-non-callable = "ignore"           # 2 errors, dynamic factory patterns
invalid-type-form = "ignore"           # 3 errors, advanced generics
unknown-argument = "ignore"            # 3 errors, third-party keyword args
deprecated = "ignore"                  # 6 warnings, third-party deprecations
unresolved-attribute = "warn"          # 6 errors, protocol/model attribute gaps
unresolved-reference = "warn"          # 2 errors, forward references
unresolved-import = "warn"             # 1 error, optional dependency (kuzu)
invalid-assignment = "warn"            # 2 errors, third-party stub mismatches
invalid-return-type = "warn"           # 2 errors, implicit None returns
not-iterable = "warn"                  # 1 error, exception unpacking pattern
invalid-await = "warn"                 # 3 errors, surrealdb SDK stubs missing async annotations
unused-ignore-comment = "warn"         # 1 warning, stale type: ignore comment

[tool.uv]
constraint-dependencies = [
    # Security: CVE-2026-25645 fixed in 2.33.0
    "requests>=2.33.0",
    # Security: CVE-2026-4539 (no listed fix; pin to latest)
    "pygments>=2.20.0",
]

[tool.uv.sources]
khora-accel = { path = "rust/khora-accel", editable = true }

[dependency-groups]
dev = [
    "prek>=0.3.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
    "ty>=0.0.18",
    "rapidfuzz>=3.14.3",  # For ty type checking of optional accel module
    "spacy>=3.8.11",
    "aiosqlite>=0.20.0",  # For SQLite backend tests
]
