[package]
name = "khora-accel"
version = "0.3.8"
edition = "2021"
rust-version = "1.83"
description = "Rust-accelerated operations for Khora memory lake"


[lib]
name = "khora_accel"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["auto-initialize"] }
numpy = "0.28"
ndarray = "0.17"
rayon = "1.10"
strsim = "0.11"
regex = "1.10"
aho-corasick = "1.1"
hashbrown = "0.16"
ordered-float = "5.0"

[features]
default = ["parallel"]
parallel = []

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "cosine_bench"
harness = false

[[bench]]
name = "bm25_bench"
harness = false

[[bench]]
name = "pagerank_bench"
harness = false
