[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "khora-accel"
dynamic = ["version"]
requires-python = ">=3.13"
description = "Rust-accelerated operations for Khora (MMR, cosine, PageRank, entity resolution, community detection)"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "AllTheData Inc." }]
keywords = ["khora", "rust", "pyo3", "acceleration", "vector", "graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/DeytaHQ/khora"
Repository = "https://github.com/DeytaHQ/khora"
Issues = "https://github.com/DeytaHQ/khora/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "Cargo.toml"
